--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.484.0",
     "react": "^19.0.0",
