--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
     "express-async-handler": "^1.2.0",
+    "framer-motion": "^12.6.2",
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "leaflet": "^1.9.4",
