--- a/client/package.json
+++ b/client/package.json
@@ -27,9 +27,11 @@
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
+    "embla-carousel-react": "^8.5.2",
     "express-async-handler": "^1.2.0",
     "framer-motion": "^12.6.2",
     "helmet": "^8.1.0",
